// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Menu successfully 1`] = `
<div>
  <div
    class="pf-c-menu"
    data-ouia-component-id="OUIA-Generated-Menu-1"
    data-ouia-component-type="PF4/Menu"
    data-ouia-safe="true"
  >
    content
  </div>
</div>
`;

exports[`with isNavFlyout should render Menu with nav flyout styles applied 1`] = `
<div
  className="pf-c-menu pf-m-nav"
  data-ouia-component-id="OUIA-Generated-Menu-4"
  data-ouia-component-type="PF4/Menu"
  data-ouia-safe={true}
>
  content
</div>
`;

exports[`with isPlain should render Menu with plain styles applied 1`] = `
<div
  className="pf-c-menu pf-m-plain"
  data-ouia-component-id="OUIA-Generated-Menu-2"
  data-ouia-component-type="PF4/Menu"
  data-ouia-safe={true}
>
  content
</div>
`;

exports[`with isScrollable should render Menu with scrollable styles applied 1`] = `
<div
  className="pf-c-menu pf-m-scrollable"
  data-ouia-component-id="OUIA-Generated-Menu-3"
  data-ouia-component-type="PF4/Menu"
  data-ouia-safe={true}
>
  content
</div>
`;
